--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,75 +1,74 @@
+/* mobile 375px */
+
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  --mobile-width: 376px;
+  /* fonts-sizes */
+  --h1-font-size: 56px;
+  --h2-font-size: 48px;
+  --h3-font-size: 40px;
+  --h4-font-size: 32px;
+  --h5-font-size: 24px;
+  --h6-font-size: 20px;
+  --h1-line-height: 120%;
+  --h2-line-height: 120%;
+  --h3-line-height: 120%;
+  --h4-line-height: 130%;
+  --h5-line-height: 140%;
+  --h6-line-height: 140%;
+  --text-large-font-size: 20px;
+  --text-medium-font-size: 18px;
+  --text-regular-font-size: 16px;
+  --text-small-font-size: 14px;
+  --text-tiny-font-size: 12px;
+  /* colors */
+  --primary: #000000;
+  --neutral-lighter: #cccccc;
+  --white: #ffffff;
+  --neutral-lightest: #eeeeee;
+  --neutral-light: #aaaaaa;
+  --neutral: #666666;
+  --neutral-dark: #444444;
+  --neutral-darker: #222222;
+  --neutral-darkest: #111111;
+  --success-green: #047a47;
+  --success-green-light: #ecfcf3;
+  --error-red: #b32419;
+  --error-red-light: #fef2f2;
+  /* gaps */
+  --huge-gap: 112px;
+  --large-gap: 64px;
+  --big-gap: 48px;
+  --middle-gap: 32px;
+  --main-gap: 24px;
+  --regular-gap: 16px;
+  --small-gap: 8px;
+  --tiny-gap: 4px;
+  /* */
+  --foreground-color: var(--primary);
+  --background-color: var(--white);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --foreground-color: var(--white);
+    --background-color: var(--primary);
+  }
+}
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
+@media (max-width: 376px) {
+  :root {
+    --h1-font-size: 40px;
+    --h2-font-size: 36px;
+    --h3-font-size: 32px;
+    --h4-font-size: 24px;
+    --h5-font-size: 20px;
+    --h6-font-size: 18px;
+    --h1-line-height: 120%;
+    --h2-line-height: 120%;
+    --h3-line-height: 120%;
+    --h4-line-height: 140%;
+    --h5-line-height: 140%;
+    --h6-line-height: 140%;
   }
 }
 
@@ -86,22 +85,81 @@ body {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: var(--background-color);
+  color: var(--foreground-color);
 }
 
 a {
+  font-size: var(--text-regular-font-size);
+  line-height: 150%;
+  letter-spacing: 0;
   color: inherit;
   text-decoration: none;
+  text-wrap: nowrap;
+  &:hover {
+    opacity: 0.6;
+  }
+  &:active {
+    opacity: 0.3;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
+}
+
+h1 {
+  font-size: var(--h1-font-size);
+  line-height: var(--h1-line-height);
+  font-weight: bold;
+  letter-spacing: 0;
+  text-decoration: none;
+}
+
+h2 {
+  font-size: var(--h2-font-size);
+  line-height: var(--h2-line-height);
+  font-weight: bold;
+  letter-spacing: 0;
+  text-decoration: none;
+}
+
+h3 {
+  font-size: var(--h3-font-size);
+  line-height: var(--h3-line-height);
+  font-weight: bold;
+  letter-spacing: 0;
+  text-decoration: none;
+}
+
+h4 {
+  font-size: var(--h4-font-size);
+  line-height: var(--h4-line-height);
+  font-weight: bold;
+  letter-spacing: 0;
+  text-decoration: none;
+}
+
+h5 {
+  font-size: var(--h5-font-size);
+  line-height: var(--h5-line-height);
+  font-weight: bold;
+  letter-spacing: 0;
+  text-decoration: none;
+}
+
+h6 {
+  font-size: var(--h6-font-size);
+  line-height: var(--h6-line-height);
+  font-weight: bold;
+  letter-spacing: 0;
+  text-decoration: none;
+}
+
+p, span {
+  line-height: 150%;
+  letter-spacing: 0;
+  text-decoration: none;
 }
